kubernetes/dan-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dan
  labels:
    istio-injection: enabled
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/audit: privileged
