kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: 3d
  namespace: dan
spec:
  selector:
    app: 3d
  ports:
  - name: http 
    port: 8080
    targetPort: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: 3d
  namespace: dan
spec:
  hosts:
    - "3d.mrthinger.com"
  gateways:
    - mrthinger/mrthinger-gateway
  http:
    - route:
        - destination:
            host: 3d
            port:
              number: 8080
